<resources>
    <string name="switch_lang_btn">Switch language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="switch_theme">Switch theme</string>
    <string name="switch_language">Polski</string> <!-- dla en -->
    <string name="english" translatable="false">English</string>
    <string name="polski" translatable="false">Polski</string>
    <string name="app_name">MessengerApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="type_message">Type message…</string>
    <string name="send">Send</string>
    <string name="usernameChat">Username</string>
    <string name="messages">Messages</string>
    <string name="new_chat">New chat</string>
    <string name="user_search">Find a user</string>
    <string name="user_doesnt_exist">User doesn\'t exist</string>
    <string name="incorrect_user">Please use a valid user id</string>
    <string name="cancel">Cancel</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="logout">Logout</string>
    <string name="message_text">Message</string>
    <string name="play_audio">▶️ Play audio</string>
    <string name="change_password">Change Password</string>
    <string name="role">Role cipa: </string>
    <string name="delete_account">Delete Account</string>
    <string name="username_format">Username: %1$s</string>
    <string name="role_format">Role: %1$s</string>
    <string name="account_deleted">Account deleted!!!</string>
    <string name="username2">Username: </string>
    <string name="notification_title">New message from: </string>
</resources>