<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradient"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_account_circle" />

        <EditText
            android:id="@+id/usernameRegister_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/username"
            android:textColor="@color/persistent_white"
            android:textColorHint="@color/persistent_white"
            android:textSize="13sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordRegister_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColor="@color/persistent_white"
            android:textColorHint="@color/persistent_white"
            android:textSize="13sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerSubmit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/white"
            android:textColor="@color/text_color"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
